Add Pagination pages

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,7 @@ target 'boiler' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
   pod 'ReactNativeLocalization', :path => '../node_modules/react-native-localization'
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
 
   target 'boilerTests' do
     inherit! :complete
