--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "16.11.0",
     "react-native": "^0.62.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-iphone-x-helper": "^1.2.1",
     "react-native-localization": "^2.1.6",
     "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "^1.9.0",
