--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "5.0.6",
     "@react-navigation/native": "5.0.6",
     "@react-navigation/stack": "5.0.6",
     "@types/redux-logger": "^3.0.8",
